--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -387,8 +387,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "name = \"Art Vandelay\"\n",
