Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -433,6 +433,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Send an email to Liz Kaplan at liz@ka-plan.com to say how nice it was meeting yesterday.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Send an email to \" + name + \" at \" + email +  \" to say how nice it was meeting yesterday.\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
