--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -476,15 +476,8 @@
     }
    ],
    "source": [
-    "name # 'Liz Kaplan' \""
+    "name # 'Liz Kaplan' "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
