--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"lasdjflsdjf\""
+   ]
   },
   {
    "cell_type": "code",
