--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
     }
    ],
    "source": [
-    "\"Send an email to Art Vandelay at 'art.vandelay@vandelay.com' to say how nice it was meeting yesterday.\""
+    "\"Send an email to Art Vandelay at \"art.vandelay@vandelay.com to say how nice it was meeting yesterday.\""
    ]
   },
   {
