--- a/index.ipynb
+++ b/index.ipynb
@@ -378,10 +378,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sdff'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"asdf\" and 'sdff'"
+   ]
   },
   {
    "cell_type": "markdown",
