Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -587,16 +587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'LIZ KAPLAN'"
+       "'BOB'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
